# Fish

./: .gitignore  CMakeLists.txt  mainpage.dox  manifest.xml  meshes  package.xml
config/: control.yaml
launch/: .water_world.launch.swp  simple_world.launch  water_world.launch
meshes/: Ass-y with tail.STL  Ass-y without tail.SLDASM  Ass-y without tail.STL  Cylinder.SLDPRT  Cylinder.STL  Karandash.STL  Model_HeavyBottom.STL  Nose.SLDPRT  Nose.STL  Porshen.SLDPRT  Porshen.STEP  Porshen.STL  Tail.SLDPRT  Tail.STL  Tail1.SLDPRT  Tail_Mount.SLDPRT  Tail_Mount.STL  Tail_Mount1.STL  Tail_zapolnennie.STL  Torpeda.STL  model.stl
meshes/Rework/: hvost.STL
src/: control.py
urdf/: .fish.urdf.xacro.swp  fish.urdf  fish.urdf.xacro
